--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node scripts/index.js",
+    "dev": "nodemon scripts/index.js",
+    "kafka": "node scripts/kafka.js",
+    "kafka-dev": "nodemon scripts/kafka.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "kafka-node": "^5.0.0",
     "mongoose": "^8.0.1"
   }
 }
