--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node scripts/index.js",
-    "dev": "nodemon scripts/index.js",
-    "kafka": "node scripts/kafka.js",
-    "kafka-dev": "nodemon scripts/kafka.js"
+    "start": "node backend/scripts/index.js",
+    "dev": "nodemon backend/scripts/index.js",
+    "kafka": "node kafka-microservice/scripts/kafka.js",
+    "kafka-dev": "nodemon kafka-microservice/scripts/kafka.js"
   },
   "repository": {
     "type": "git",
@@ -21,14 +21,5 @@
   "bugs": {
     "url": "https://github.com/dyte-submissions/november-2023-hiring-Cursed-Ninja/issues"
   },
-  "homepage": "https://github.com/dyte-submissions/november-2023-hiring-Cursed-Ninja#readme",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "joi": "^17.11.0",
-    "kafka-node": "^5.0.0",
-    "mongoose": "^8.0.1"
-  }
+  "homepage": "https://github.com/dyte-submissions/november-2023-hiring-Cursed-Ninja#readme"
 }
