--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "dyte-assignment",
+  "name": "log-ingestor",
   "version": "1.0.0",
-  "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-24ddc0f5d75046c5622901739e7c5dd533143b0c8e959d652212380cedb1ea36.svg)](https://classroom.github.com/a/2sZOX9xt)\r <!-- Improved compatibility of back to top link: See: https://github.com/othneildrew/Best-README-Template/pull/73 -->\r <a name=\"readme-top\"></a>\r <!--\r *** Thanks for checking out the Best-README-Template. If you have a suggestion\r *** that would make this better, please fork the repo and create a pull request\r *** or simply open an issue with the tag \"enhancement\".\r *** Don't forget to give the project a star!\r *** Thanks again! Now go create something AMAZING! :D\r -->",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -13,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dyte-submissions/november-2023-hiring-Cursed-Ninja.git"
+    "url": "git+https://github.com/Cursed-Ninja/log-ingestor.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/dyte-submissions/november-2023-hiring-Cursed-Ninja/issues"
+    "url": "https://github.com/Cursed-Ninja/log-ingestor/issues"
   },
-  "homepage": "https://github.com/dyte-submissions/november-2023-hiring-Cursed-Ninja#readme"
+  "homepage": "https://github.com/Cursed-Ninja/log-ingestor#readme"
 }
